@startuml
entity Leads{
    *lead_id : number <<generated>>
    --
    *nombre : text
    *apellido : text
    email : text
    direccion : text
    tel : number
}

entity Carreras{
    *carrera_id : number <<generated>>
    --
    *nombre : text
}

entity Materias{
    *materia_id : number <<generated>>
    --
    *nombre : text
    *carrera_id : number <<FK>>
}

entity Cursados{
    *año_cursado : year
    *carrera_id : number <<FK>>
    *lead_id : number <<FK>>
    --
    universidad : text
}

entity InscripcionMateria{
    *año_cursado : year <<FK>>
    *carrera_id : number <<FK>>
    *lead_id : number <<FK>>
    *materia_id : number <<FK>>
    --
    *veces_cursada : number
}

Leads ||-right-o{ Cursados
Cursados }|-right-|| Carreras
Carreras ||--|{ Materias
Cursados ||--|{ InscripcionMateria
Materias ||--|{ InscripcionMateria
@enduml